--- a/Main/src/main/webapp/WEB-INF/templates/login.html
+++ b/Main/src/main/webapp/WEB-INF/templates/login.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>登录</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>管理员登录</title>
+
+
+    <meta name="author" content="hxuanyu">
+    <link th:href="@{/static/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/materialdesignicons.min.css}" rel="stylesheet">
+    <link th:href="@{/static/css/style.css}" rel="stylesheet">
+    <link th:href="@{/static/css/toastr.min.css}" rel="stylesheet">
+    <style>
+        .wrapper {
+            position: relative;
+        }
+
+        .login {
+            display: flex !important;
+            min-height: 100vh;
+            align-items: center !important;
+            justify-content: center !important;
+        }
+
+        .login-center {
+            background: #fff;
+            min-width: 38.25rem;
+            padding: 2.14286em 3.57143em;
+            border-radius: 5px;
+            margin: 2.85714em 0;
+        }
+
+        .login-header {
+            margin-bottom: 1.5rem !important;
+        }
+
+        .login-center .has-feedback.feedback-left .form-control {
+            padding-left: 38px;
+            padding-right: 12px;
+        }
+
+        .login-center .has-feedback.feedback-left .form-control-feedback {
+            left: 0;
+            right: auto;
+            width: 38px;
+            height: 38px;
+            line-height: 38px;
+            z-index: 4;
+            color: #dcdcdc;
+        }
+
+        .login-center .has-feedback.feedback-left.row .form-control-feedback {
+            left: 15px;
+        }
+    </style>
 </head>
-<body>
+
+<body data-logobg="color_8" data-sidebarbg="color_8">
+<div class="row wrapper">
+    <div class="login">
+        <div class="login-center">
+            <div class="login-header text-center">
+                <h1>登录</h1>
+            </div>
+            <div class="reg-wrap">
+                <div class="form-group has-feedback feedback-left">
+                    <input type="text" placeholder="请输入您的用户名" class="form-control" name="username" id="username"/>
+                    <span class="mdi mdi-account form-control-feedback" aria-hidden="true"></span>
+                </div>
+                <div class="form-group has-feedback feedback-left">
+                    <input type="password" placeholder="请输入密码" class="form-control" id="password" name="password"/>
+                    <span class="mdi mdi-lock form-control-feedback" aria-hidden="true"></span>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-block btn-primary" id="do_login" type="button">立即登录</button>
+                </div>
+            </div>
+            <hr>
+            <footer class="col-sm-12 text-center">
+                <p class="m-b-0">Copyright © 2019 <a th:href="@{/index}">hxuanyu</a>. All right <a
+                        href="http://www.bootstrapmb.com/">reserved</a></p>
+            </footer>
+        </div>
+    </div>
+</div>
+<!--脚本文件-->
+<script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/toastr.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/clerk/login.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/common.js}"></script>
 
 </body>
 </html>
