--- a/Main/src/main/webapp/WEB-INF/templates/commodity.html
+++ b/Main/src/main/webapp/WEB-INF/templates/commodity.html
@@ -32,8 +32,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Link</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">用户名 <span class="caret"></span></a>
+                        <a th:href="@{/}" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true"
+                           aria-expanded="false"><span
+                                th:text="${session.session_clerk.clerkName == null}?'请先登录':${session.session_clerk.clerkName}"></span><span
+                                class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">退出登录</a></li>
                         </ul>
@@ -43,6 +46,51 @@
         </div><!-- /.container-fluid -->
     </nav>
 </header>
+<div class="container">
+    <div class="row">
+        <div role="main">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">Panel heading</div>
+                <div class="panel-body">
+                    商品列表
+                </div>
+
+                <!-- Table -->
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Username</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--脚本文件-->
 <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
